# phidgets_drivers

./: .gitignore
phidgets_api/: CMakeLists.txt
phidgets_api/include/phidgets_api/: gps.h  phidget.h
phidgets_api/src/: gps.cpp  phidget.cpp
phidgets_api/tests/: test_gps.cpp  test_gps_async.cpp  test_gps_sync.cpp
phidgets_gps/: CMakeLists.txt  package.xml  phidgets_gps_nodelet.xml
phidgets_gps/include/phidgets_gps/: gps_ros_i.h  phidgets_gps_nodelet.h
phidgets_gps/launch/: phidgets_gps.launch  phidgets_gps_async.launch  phidgets_gps_async.launch~  phidgets_gps_sync.launch  phidgets_gps_sync.launch~  phidgets_imu.launch
phidgets_gps/src/: gps_ros_i.cpp  phidgets_gps_async_node.cpp  phidgets_gps_async_nodelet.cpp  phidgets_gps_node.cpp  phidgets_gps_nodelet.cpp  phidgets_gps_sync_node.cpp  phidgets_gps_sync_nodelet.cpp
phidgets_imu/include/phidgets_imu/: imu_ros_i.h
phidgets_imu/launch/: phidgets_imu.launch  phidgets_imu.launch~
phidgets_imu/src/: imu_ros_i.cpp
